# jcompiler

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  TODO.md  assemble-and-link-armv7.sh  integration_tests.sh  j1
.circleci/: config.yml
arm/: exp  exp.s
benches/: benchmarks.rs
benches.removed/: benchmarks.remoed
c_defns/: jarm.c  jarm.h  jcommon.h  jlib.c  jmemory.c  jverbs.c
j_examples/: test.ijs
jlang_programs/: ctest_additions_lists.ijs  ctest_additions_lists_mixedlens_legal.ijs  ctest_additions_single_numbers.ijs  ctest_ch2_learningjbook.ijs  ctest_decimals.ijs  ctest_divisions.ijs  ctest_double_monadic_increment.ijs  ctest_double_monadic_square.ijs  ctest_dyadic_append.ijs  ctest_dyadic_copy.ijs  ctest_dyadic_largerorequal.ijs  ctest_dyadic_shape.ijs  ctest_equal.ijs  ctest_global_assgmts_refs.ijs  ctest_global_assgmts_refs_array.ijs  ctest_global_assgmts_refs_double.ijs  ctest_global_assgmts_refs_integer.ijs  ctest_global_refs_mixedverbs.ijs  ctest_increment_square.ijs  ctest_insertions_minus.ijs  ctest_insertions_plus.ijs  ctest_insertions_times.ijs  ctest_is_verb_globalassgmts.ijs  ctest_largerthan.ijs  ctest_lessthan.ijs  ctest_list_expr.ijs  ctest_mixed_adds_mults.ijs  ctest_monadic_ceiling.ijs  ctest_monadic_increment.ijs  ctest_monadic_largerof.ijs  ctest_monadic_negate.ijs  ctest_monadic_reciprocal.ijs  ctest_monadic_shapeof.ijs  ctest_monadic_square.ijs  ctest_monadic_tally.ijs  ctest_negative_numbers.ijs  ctest_number_expr.ijs  ctest_power.ijs  ctest_products_lists.ijs  ctest_products_lists_mixedlens_legal.ijs  (+8 more)
sandbox/: jarm.c  (+4 more)
(+2295 files in other folders)
